found_bugs/kotlin/10/compiler_output
program.kt:3:4: error: no method 'equals(Any?): Boolean' available
	x == 1
   ^
program.kt:3:4: error: unresolved reference: ==
	x == 1
   ^
